shelf height overflow fix

--- a/client/components/shelf/shelf.component.scss
+++ b/client/components/shelf/shelf.component.scss
@@ -22,7 +22,7 @@
 		}
 		.carousel {
 			// direction: ltr;
-			height: 100vh;
+			// height: 100vh;
 			&__spacer {
 				background-color: #cecece;
 				min-width: 3rem;
@@ -54,9 +54,9 @@
 				}
 			}
 
-			height: 100vh;
+			// height: 100vh;
 			.slide {
-				height: 100vh;
+				// height: 100vh;
 				min-width: 100%;
 				background-size: cover;
 				// background-position: center;
@@ -137,7 +137,7 @@
 	}
 	.swiper {
 		&-container {
-			height: 100vh;
+			height: 100%;
 			// position: initial;
 			// z-index: -1;
 			// overflow: unset;
